# guest-components

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.aa  Dockerfile.api  Dockerfile.cdh  Dockerfile.ci  Makefile  README.md  REPRODUCIBLE_BUILD.md  aa-start.sh  build-image-push.sh  cdh-start.sh  gpu_attestation.py  nvswitch_attestation.py  trustiflux.spec  version-base.yml
.aoneci/: rust-ci.yaml
.github/scripts/: generate_rpm_per_file_provenance.sh  notify_rvds_release.sh  upload_provenance_to_rekor.sh
.github/workflows/: aa_basic.yml  aa_cc_kbc.yml  aa_crypto.yml  aa_release.yml  aa_sample_keyprovider.yml  aa_sev_kbc.yml  api-server-rest-basic.yml  build_rpm.yml  cdh_basic.yml  image_rs_build.yml  links.yml  ocicrypt_rs_build.yml  publish-artifacts.yml  rpm_provenance_slsa3.yml  trustee-attester.yml  vendor_release.yml
APPLICATION/attestation-agent/: buildspec.yml  version.yml
APPLICATION/ci-image/: buildspec.yml
APPLICATION/confidential-data-hub/: buildspec.yml  version.yml
APPLICATION/trustiflux-api-server/: buildspec.yml  version.yml
api-server-rest/: Cargo.toml  README.md  build.rs
api-server-rest/openapi/: api.json
api-server-rest/protos/: attestation_agent.proto  confidential_data_hub.proto
api-server-rest/src/: aa.rs  cdh.rs  config.rs  main.rs
api-server-rest/src/ttrpc_proto/: confidential_data_hub.rs  confidential_data_hub_ttrpc.rs
attestation-agent/attestation-agent/: Cargo.toml  README_aa_instance.md  build.rs
attestation-agent/attestation-agent/src/: lib.rs
attestation-agent/attestation-agent/test/: config6.toml
attestation-agent/attestation-agent/tests/: aa_instance_info_test.toml  config.example.toml
attestation-agent/attester/: Cargo.toml  build.rs
attestation-agent/attester/src/: lib.rs  types.rs  utils.rs
attestation-agent/attester/src/az_snp_vtpm/: mod.rs
attestation-agent/attester/src/az_tdx_vtpm/: mod.rs
attestation-agent/attester/src/cca/: mod.rs
attestation-agent/attester/src/hygon_tpm/: mod.rs
attestation-agent/attester/src/nvidia/: mod.rs
attestation-agent/attester/src/sample/: measure_register.rs  mod.rs
attestation-agent/attester/src/sample_device/: mod.rs
attestation-agent/attester/src/sgx_dcap/: mod.rs
attestation-agent/attester/src/snp/: mod.rs
attestation-agent/attester/src/system/: inner.rs  mod.rs
attestation-agent/attester/src/system/sysinfo/: mod.rs
attestation-agent/attester/src/system/sysinfo/system_info/: hardware.rs  mod.rs  software.rs
attestation-agent/attester/src/tdx/: mod.rs
attestation-agent/attester/src/tdx/gpu/: error.rs  evidence.rs  mod.rs
attestation-agent/attester/src/tpm/: mod.rs  utils.rs
attestation-agent/attester/src/tsm_report/: mod.rs
attestation-agent/coco_keyprovider/: Cargo.toml
attestation-agent/kbc/: Cargo.toml
attestation-agent/kbs_protocol/: Cargo.toml  Dockerfile.aa
attestation-agent/kbs_protocol/src/: builder.rs  keypair.rs
attestation-agent/kbs_protocol/test/: policy.rego
attestation-agent/protos/: system_attesterd.proto
confidential-data-hub/: Makefile  README.md
confidential-data-hub/docs/: RESOURCES_SERVICES.md
confidential-data-hub/hub/: Cargo.toml
confidential-data-hub/hub/protos/: api.proto
confidential-data-hub/hub/src/: api.rs  config.rs  hub.rs  (+2 more)
confidential-data-hub/kms/: Cargo.toml
image-rs/scripts/: build_confidential_data_hub.sh
image-rs/src/: image.rs  pull.rs
image-rs/tests/: README.md  credential.rs  image_decryption.rs  signature_verification.rs
nvtrust-py/: verifier-1.3.0-py3-none-any.whl
nvtrust-py-aliyun-beijing-server/: verifier-1.3.0-py3-none-any.whl
ocicrypt-rs/: Cargo.toml
(+37 files in other folders)
