[package]
name = "attester"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
az-snp-vtpm = { version = "0.7.1", default-features = false, features = [
    "attester",
], optional = true }
az-tdx-vtpm = { version = "0.7.0", default-features = false, features = [
    "attester",
], optional = true }
base64.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
eventlog-rs = { version = "0.1.7", optional = true }
hex.workspace = true
kbs-types.workspace = true
log.workspace = true
nix = { workspace = true, optional = true, default-features = false }
num-traits = { version = "0.2.19", optional = true }
occlum_dcap = { git = "https://github.com/occlum/occlum", tag = "v0.29.7", optional = true }
pnet = { version = "0.35.0", optional = true }
pv = { version = "0.10.0", package = "s390_pv", optional = true }
scroll = { version = "0.12.0", default-features = false, features = [
    "derive",
    "std",
], optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sev = { version = "4.0.0", default-features = false, features = [
    "snp",
], optional = true }
sha2.workspace = true
strum.workspace = true
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.22", optional = true }
thiserror.workspace = true
# TODO: change it to "0.1", once released.
csv-rs = { git = "https://github.com/openanolis/csv-rs.git", rev = "9e92ac7", optional = true }
codicon = { version = "3.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-tls = { version = "0.5", optional = true }
openssl = { workspace = true, optional = true }
rsa = { version = "0.9.6", features = ["pkcs5", "sha2"], optional = true }
tokio = { version = "1", features = ["fs"] }
tempfile = { workspace = true, optional = true }
tss-esapi = { version = "7.6.0", optional = true }
udev = { version = "0.9.1", optional = true }
nvml-wrapper = { version = "0.11", optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
chrono = { workspace = true, features = ["serde"], optional = true } 

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true

[[bin]]
name = "evidence_getter"
required-features = ["bin"]

[features]
default = ["all-attesters"]
all-attesters = [
    "tdx-attester",
    "sgx-attester",
    "az-snp-vtpm-attester",
    "az-tdx-vtpm-attester",
    "snp-attester",
    "csv-attester",
    "cca-attester",
    "se-attester",
    "system-attester",
    "tpm-attester",
]

# tsm-report enables a module that helps attesters to use Linux TSM_REPORTS for generating
# quotes. It's an unconditional dependency for tdx-attester since that is the only way to
# generate TDX quotes with upstream kernels.
tsm-report = ["tempfile"]
tdx-attester = ["scroll", "tsm-report", "tdx-attest-rs", "eventlog-rs", "gpu-attester"]
gpu-attester = ["nvml-wrapper", "uuid", "chrono"]
sgx-attester = ["occlum_dcap"]
az-snp-vtpm-attester = ["az-snp-vtpm"]
az-tdx-vtpm-attester = ["az-snp-vtpm-attester", "az-tdx-vtpm"]
snp-attester = ["sev"]
csv-attester = ["hygon", "codicon", "hyper", "hyper-tls"]
hygon = ["csv-rs"]
cca-attester = ["tsm-report"]
se-attester = ["pv"]
system-attester = ["nix/feature", "pnet", "udev"]
tpm-attester = ["openssl", "rsa", "num-traits", "tss-esapi"]

bin = ["tokio/rt", "tokio/macros", "clap"]
